updated css to fix header and spacing after carousel

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,5 +1,5 @@
 #header {
-  position: sticky;
+  position: fixed;
   width: var(--header-width);
   height: var(--header-height);
   left: calc(50% - var(--header-width) / 2);
