--- a/src/components/imageDisplay/carousel/Carousel.css
+++ b/src/components/imageDisplay/carousel/Carousel.css
@@ -1,4 +1,5 @@
 .carousel-container {
   max-width: 50vh;
   margin: 40px;
+  padding: var(--header-height);
 }
